# lgtm1

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/src/api/: __init__.py  main.py
api/src/api/application/: scenario_service.py
api/src/api/domain/: __init__.py  scenarios.py
api/src/api/infrastructure/: __init__.py  telemetry.py
api/src/api/presentation/: __init__.py  http.py
api/tests/: test_app.py
docker/: alloy-config.alloy  compose.kvm2.yaml  compose.yaml  mimir-config.yaml  tempo-config.yaml
docker/grafana/dashboards/: lgtm-flight-deck.json  lgtm-overview.json  lgtm-signals-tour.json  vps-health.json
docker/grafana/provisioning/dashboards/: default.yaml
docker/grafana/provisioning/datasources/: default.yaml
docker/mimir-rules/: demo-api.yaml
docs/: DEV_GUIDE.md  DEV_GUIDE_SENIOR.md  architecture.md  custom-signals.md  faq-video.md  grafana-click-paths.md  kvm2-runbook.md  lgtm-flight-deck-guide.md  lgtm-overview-guide.md  o11y-quick-queries.md  prd.md  project-guide.md  roadmap-inicial.md  security-checklist-kvm2.md  troubleshooting.md  video-article.md  video-brief.md  video-playbook.md  video-story-study-mode.md  vps-health-guide.md
frontend/: package-lock.json
frontend/src/: App.tsx
